--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,13 +11,7 @@ pool:
 
 steps:
   - bash: echo This is the location $(Agent.BuildDirectory)
-  - bash: echo This is the Machine Name 1 $env:MY_MACHINE_NAME or $MY_MACHINE_NAME_2
-    env:
-      MY_MACHINE_NAME: $(Agent.MachineName)
-      MY_MACHINE_NAME_2: $(Agent.MachineName)
-  - bash: echo This is a script that could use $SYSTEM_ACCESSTOKEN
-    env:
-      SYSTEM_ACCESSTOKEN: $(System.AccessToken)
+  - bash: echo My current Build Number $(Build.BuildNumber)
   - powershell: Write-Host "This is a script that could use $env:SYSTEM_ACCESSTOKEN"
     env:
       SYSTEM_ACCESSTOKEN: $(System.AccessToken)
