Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,10 +13,13 @@ variables:
   maxversion: 0
   minversion: 1
   patchversion: 0
-
-steps:
-  - bash: echo Build with version nuber $(maxversion).$(minversion).$(patchversion)
-  - bash: echo My current Build Number $(Build.BuildNumber)
-  - powershell: Write-Host "This is a script that could use $env:SYSTEM_ACCESSTOKEN"
-    env:
-      SYSTEM_ACCESSTOKEN: $(System.AccessToken)
+jobs:
+  - job: job1
+    variables:
+      jobvariable: 'MyJob'
+    steps:
+    - bash: echo For job $(jobvariable) the Build with version nuber $(maxversion).$(minversion).$(patchversion)
+    - bash: echo My current Build Number $(Build.BuildNumber)
+    - powershell: Write-Host "This is a script that could use $env:SYSTEM_ACCESSTOKEN"
+      env:
+        SYSTEM_ACCESSTOKEN: $(System.AccessToken)
