Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,15 +9,14 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
-variables:
-  maxversion: 0
-  minversion: 1
-  patchversion: 0
-
-
 steps:
-  - bash: echo For job $(jobvariable) the Build with version nuber $(maxversion).$(minversion).$(patchversion)
-  - bash: echo My current Build Number $(Build.BuildNumber)
-  - powershell: Write-Host "This is a script that could use $env:SYSTEM_ACCESSTOKEN"
-    env:
-      SYSTEM_ACCESSTOKEN: $(System.AccessToken)
+
+# Create a variable
+- script: |
+    echo '##vso[task.setvariable variable=sauce]crushed tomatoes'
+
+# Use the variable
+# "$(sauce)" is replaced by the contents of the `sauce` variable by Azure Pipelines
+# before handing the body of the script to the shell.
+- script: |
+    echo my pipeline variable is $(sauce)
