--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,14 +9,10 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
-steps:
-
-# Create a variable
-- script: |
-    echo '##vso[task.setvariable variable=sauce]crushed tomatoes'
-
-# Use the variable
-# "$(sauce)" is replaced by the contents of the `sauce` variable by Azure Pipelines
-# before handing the body of the script to the shell.
-- script: |
-    echo my pipeline variable is $(sauce)
+jobs:
+- job:
+  variables:
+    x: format('{0:yyyyMMdd}', pipeline.startTime)
+    a: $[counter(format('{0:yyyyMMdd}', pipeline.startTime), 100)]
+  steps:
+    - bash: echo $(x) is incrmented by 100 to get $(a)
