--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,6 @@ pool:
 jobs:
 - job:
   variables:
-    x: format('{0:yyyyMMdd}', pipeline.startTime)
     a: $[counter(format('{0:yyyyMMdd}', pipeline.startTime), 100)]
-    steps:
-    - bash: echo $(x) is incrmented by 100 to get $(a)
+  steps:
+    - bash: echo $(a)
