--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,20 +1,22 @@
-# Maven
-# Build your Java project and run tests with Apache Maven.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
+# File: azure-pipelines.yml
 
-trigger:
-- master
-
-pool:
-  vmImage: 'ubuntu-latest'
-
-parameters:
-    stage: ''
 jobs:
-- job: ${{ parameters.stage }}
-    steps:
-    - script:  |
-        rm $(base_location)/${{ parameters.stage }}/*
-        cp $(Build.SourcesDirectory)/* $(base_location)/${{ parameters.stage }}
-    displayName: 'Copy source code to ${{ parameters.stage }} destination'
+- job: Linux
+  pool:
+    vmImage: 'ubuntu-16.04'
+  steps:
+  - template: templates/script-steps.yml  # Template reference
+
+- job: macOS
+  pool:
+    vmImage: 'macOS-10.13'
+  steps:
+  - template: templates/script-steps.yml  # Template reference
+
+- job: Windows
+  pool:
+    vmImage: 'vs2017-win2016'
+  steps:
+  - script: echo This script runs before the template's steps, only on Windows.
+  - template: templates/script-steps.yml  # Template reference
+  - script: echo This step runs after the template's steps.
