--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@
 jobs:
 - job:
   variables:
-    x: format('{0:yyyyMMdd}', pipeline.startTime)
-    a: $[counter(format('{0:yyyyMMdd}', pipeline.startTime), 100)]
+    x: 1
+    a: $[counter(1, 100)]
   steps:
     - bash: echo $(x) is incrmented by 100 to get $(a)
