--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,6 @@ jobs:
 - job:
   variables:
     x: 1
-    a: $[counter(10, 100)]
+    a: $[counter(x, 0)]
   steps:
-    - bash: echo $(x) is incrmented by 100 to get $(a)
+    - bash: echo $(x) is incrmented by 0 to get $(a)
