--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,6 @@ jobs:
     vmImage: 'macOS-10.13'
   variables:
     x: 1
-    a: 2
+    a: $[counter(variables['x'], 0)]
   steps:
     - bash: echo $(x) is incrmented by 0 to get $(a)
