Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,9 @@ jobs:
   pool:
     vmImage: 'macOS-10.13'
   variables:
+    name: $(BuildDefinitionName)-$(Rev:.r)
     x: 10
     a: $[counter(variables['x'], 5)]
   steps:
     - bash: echo $(x) is incremented by 0 to get $(a)
+    - bash: echo Build Definition Name - $(name)
